# dockwatch

./: .gitignore  README.md  display.py  docker_client.py  main.py  pyproject.toml  requirements.txt
dockmira/: cli.py  display.py  docker_client.py
dockwatch/: cli.py  display.py  docker_client.py
