[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "dockmira"
version = "1.0.0"
description = "Real time Docker container monitoring from your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "docker>=7.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
dockmira = "cli:cli"